--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <header>
       <div>
         <h1>ADN — Explicación clara y juego interactivo</h1>
-        <div class="lead">Bloques listos para usar en tu web. Al final hay una sección interactiva para practicar.</div>
+        <div class="lead"></div>
       </div>
 
       <!-- Imagen ADN -->
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/DNA_simple2.svg/320px-DNA_simple2.svg.png" 
+      <img src="ADN.png" 
            alt="Ilustración ADN" 
            style="height:120px; filter:drop-shadow(0 0 6px #8be)" />
     </header>
@@ -143,4 +143,5 @@
 
 </body>
 </html>
+
 
