--- a/index.html
+++ b/index.html
@@ -38,33 +38,42 @@
       <!-- SECCIÓN ADN -->
       <section id="que-es-adn" class="card">
         <h2>¿Qué es el ADN?</h2>
-        <img class="sec-img" 
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/DNA_simple2.svg/180px-DNA_simple2.svg.png"
-          alt="Ilustración ADN">
         <p>El ADN (ácido desoxirribonucleico) es la molécula que contiene la información genética de todos los seres vivos...</p>
       </section>
 
       <!-- GEN -->
       <section id="genes" class="card">
         <h2>¿Qué es un gen?</h2>
+         <img class="sec-img" 
+          src="Gen.png"
+          alt="Ilustración gen">
         <p>Un gen es un segmento específico del ADN que contiene la información necesaria para producir una proteína...</p>
       </section>
 
       <!-- REPLICACIÓN -->
       <section id="replicacion" class="card">
         <h2>Replicación del ADN (ADN → ADN)</h2>
+         <img class="sec-img" 
+          src="replicacion.png"
+          alt="Ilustración replicacion">
         <p>La replicación del ADN es el proceso mediante el cual la célula crea una copia idéntica...</p>
       </section>
 
       <!-- TRANSCRIPCIÓN -->
       <section id="transcripcion" class="card">
         <h2>¿Qué es la transcripción? (ADN → ARN)</h2>
+        <img class="sec-img" 
+          src="transcripcion.png"
+          alt="Ilustración transcripcion">
         <p>La transcripción es el proceso donde la célula copia la información contenida en un gen...</p>
       </section>
 
       <!-- TRADUCCIÓN -->
       <section id="traduccion" class="card">
         <h2>Traducción genética (ARN → proteína)</h2>
+         <img class="sec-img" 
+          src="traduccion.png"
+          alt="Ilustración traduccion">
         <p>La traducción es el proceso mediante el cual el ribosoma lee la información...</p>
       </section>
 
@@ -143,5 +152,6 @@
 
 </body>
 </html>
+
 
 
