--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ADN: Explicación y Mini-juego interactivo</title>
+  <title>EL ADN</title>
 
   <!-- Archivo CSS externo -->
   <link rel="stylesheet" href="styles.css">
@@ -38,43 +38,33 @@
       <!-- SECCIÓN ADN -->
       <section id="que-es-adn" class="card">
         <h2>¿Qué es el ADN?</h2>
-        <p>El ADN (ácido desoxirribonucleico) es la molécula que contiene la información genética de todos los seres vivos...</p>
+        <p>El ADN, o ácido desoxirribonucleico, es la molécula que contiene las instrucciones genéticas para el desarrollo, funcionamiento y reproducción de todos los organismos vivos.</p>
       </section>
 
       <!-- GEN -->
       <section id="genes" class="card">
         <h2>¿Qué es un gen?</h2>
-         <img class="sec-img" 
-          src="Gen.png"
-          alt="Ilustración gen">
-        <p>Un gen es un segmento específico del ADN que contiene la información necesaria para producir una proteína...</p>
+        <p>es un segmento del ADN que contiene las instrucciones para crear proteínas y otras moléculas funcionales, siendo la unidad básica de la herencia.</p>
       </section>
 
       <!-- REPLICACIÓN -->
       <section id="replicacion" class="card">
         <h2>Replicación del ADN (ADN → ADN)</h2>
-         <img class="sec-img" 
-          src="replicacion.png"
-          alt="Ilustración replicacion">
-        <p>La replicación del ADN es el proceso mediante el cual la célula crea una copia idéntica...</p>
+        
+        <p> proceso por el cual una molécula de ADN se duplica para crear dos moléculas idénticas, asegurando la transmisión precisa de la información genética a las células hijas.</p>
       </section>
 
       <!-- TRANSCRIPCIÓN -->
       <section id="transcripcion" class="card">
         <h2>¿Qué es la transcripción? (ADN → ARN)</h2>
-        <img class="sec-img" 
-          src="transcripcion.png"
-          alt="Ilustración transcripcion">
-        <p>La transcripción es el proceso donde la célula copia la información contenida en un gen...</p>
+        <p> el primer proceso de la expresión genética, mediante el cual se transfiere la información contenida en la secuencia del ADN hacia la secuencia de proteína utilizando diversos ARN como intermediarios.</p>
       </section>
 
       <!-- TRADUCCIÓN -->
       <section id="traduccion" class="card">
         <h2>Traducción genética (ARN → proteína)</h2>
-         <img class="sec-img" 
-          src="traduccion.png"
-          alt="Ilustración traduccion">
-        <p>La traducción es el proceso mediante el cual el ribosoma lee la información...</p>
+       
+        <p>proceso biológico fundamental en la síntesis de proteínas, donde la información codificada en el ARN mensajero (ARNm) (que es una copia del ADN) se utiliza para construir una secuencia de aminoácidos.</p>
       </section>
 
       <!-- RESUMEN -->
@@ -82,6 +72,7 @@
         <h2>Del ADN a la proteína: resumen</h2>
         <ol>
           <li><strong>Replicación</strong></li>
+          <p>dsadasdas</p>
           <li><strong>Transcripción</strong></li>
           <li><strong>Traducción</strong></li>
         </ol>
@@ -152,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
