--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <header>
       <div>
-        <h1>ADN — Explicación clara y juego interactivo</h1>
+        <h1>ADN — lo increible de la biociencia</h1>
         <div class="lead"></div>
       </div>
 
@@ -71,10 +71,10 @@
       <section id="resumen" class="card">
         <h2>Del ADN a la proteína: resumen</h2>
         <ol>
-          <li><strong>Replicación</strong></li>
-          <p>dsadasdas</p>
-          <li><strong>Transcripción</strong></li>
-          <li><strong>Traducción</strong></li>
+          <li><strong>Replicación:</strong></li><p>proceso de duplicar una molécula de ADN</p>
+       
+          <li><strong>Transcripción:</strong></li><p>se copia una secuencia de ADN en una molécula de ARN</p>
+          <li><strong>Traducción:</strong></li><p>proceso de síntesis de proteínas a partir de la información del ARN</p>
         </ol>
       </section>
 
@@ -134,7 +134,7 @@
     </main>
 
     <footer>
-      <small>Contenido educativo — editable libremente para tus clases.</small>
+      <small>Contenido educativo @2025</small>
     </footer>
   </div>
 
@@ -143,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
